<resources>
    <string name="app_name">سیپ اپ</string>
    <string name="fill_required_fields">لطفا فیلدهای مربوطه را پر کنید</string>
    <string name="wrong_ip_format">فرمت ip نادرست است</string>
    <string name="duplicate_name">نام مرکز تکراری است</string>
    <string name="required_ip">لطفا اطلاعات مرکز را وارد کنید</string>
    <string name="confirmation_btn_txt">تایید</string>
    <string name="camera_permission_denied">اجازه دسترسی به دوربین داده نشد</string>
    <string name="success_attach">ارسال موفقیت آمیز بود</string>
    <string name="attach_again_question">آیا می خواهید فایل دیگری را ارسال کنید؟</string>
    <string name="chooser_title">انتخاب تصویر</string>
    <string name="select_file">لطفا فایل خود را انتخاب کنید</string>
    <string name="delete_attach_question">آیا می خواهید فایل انتخاب شده را حذف کنید؟</string>
    <string name="success_delete_attach">حذف فایل موفقیت آمیز بود</string>
    <string name="logout_item_title">خروج از حساب کاربری</string>
    <string name="search_patient_name">لطفا نام بیمار را در قسمت مربوطه جستجو کنید</string>
    <string name="storage_permission_denied">اجازه دسترسی به حافظه داده نشد</string>
    <string name="search_hint"><font size="14">لطفا نام بیمار را جستجو نمایید</font></string>
    <string name="username_hint">نام کاربری</string>
    <string name="password_hint">رمز عبور</string>
    <string name="login_btn_txt">ورود</string>
    <string name="close_btn_txt">بستن</string>
    <string name="attachments_item_title">مستندات</string>
    <string name="ip_hint">لطفا ip خود را وارد کنید</string>
    <string name="port_hint">لطفا port خود را وارد کنید</string>
    <string name="center_name_hint">لطفا نام مرکز را وارد کنید</string>
    <string name="no_search_result">نتیجه ای یافت نشد</string>
    <string name="timeout_exception_msg">اتصال به اینترنت با خطا مواجه شد</string>
    <string name="no_exist_server_msg">سرور موجود نمی باشد</string>
    <string name="yes_btn_txt">بله</string>
    <string name="no_btn_txt">خیر</string>
    <string name="error_txt">خطا</string>
    <string name="note_txt">توجه</string>
    <string name="save_btn_txt">ذخیره</string>
    <string name="center_info">اطلاعات مرکز</string>
    <string name="login_title">برنامه پوست و مو</string>
    <string name="test_item_title">تست</string>
    <string name="description_hint">توضیحات</string>
    <string name="scan_item_title">اسکن QR Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_delete_server_data_msg">آیا می خواهید آدرس موردنظر را حذف کنید؟</string>
    <string name="edit_item_title">ویرایش</string>
    <string name="delete_item_title">حذف</string>
</resources>