<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_bg"
            android:backgroundTint="@color/white"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_title_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/bold"
                android:padding="10dp"
                android:text="@string/center_info"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/center_name_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/center_name_hint"
                android:textColorHint="@color/dim_gray"
                app:boxStrokeColor="@color/dim_gray"
                app:hintTextColor="@color/dim_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_txt_center_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ip_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/ip_hint"
                android:textColorHint="@color/dim_gray"
                app:boxStrokeColor="@color/dim_gray"
                app:hintTextColor="@color/dim_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/center_name_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_txt_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/port_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/port_hint"
                android:textColorHint="@color/dim_gray"
                app:boxStrokeColor="@color/dim_gray"
                app:hintTextColor="@color/dim_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ip_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_txt_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/regular"
            android:text="@string/save_btn_txt"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="@id/layout_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_close"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/regular"
            android:text="@string/close_btn_txt"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="@id/layout_dialog"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>