<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_txt_container_one"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/username_hint"
            android:textColorHint="@color/dim_gray"
            app:boxStrokeColor="@color/dim_gray"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person"
                android:drawableTint="@color/black"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_txt_container_two"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/dim_gray"
            app:boxStrokeColor="@color/dim_gray"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_txt_container_one">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableTint="@color/black"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_server_data"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_more"
            app:layout_constraintTop_toBottomOf="@id/ed_txt_container_two"
            app:ms_arrow_tint="@color/black"
            app:ms_background_color="@color/white_smoke" />

        <ImageButton
            android:id="@+id/iv_more"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="@id/spinner_server_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinner_server_data"
            app:tint="@color/black" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/login_btn_txt"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_server_data" />

        <ImageView
            android:id="@+id/img_sip_logo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sip_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <FrameLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@color/dim_gray"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>