<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1d2951"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/ed_txt_search"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edit_text"
                android:ellipsize="end"
                android:fontFamily="@font/regular"
                android:gravity="right|center"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_more"
                app:layout_constraintStart_toEndOf="@id/btn_search"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@drawable/rounded_button"
                android:drawableLeft="@drawable/ic_search"
                android:drawableTint="@color/white"
                android:gravity="center"
                android:paddingLeft="32dp"
                app:backgroundTint="#4682B4"
                app:layout_constraintBottom_toBottomOf="@id/ed_txt_search"
                app:layout_constraintStart_toEndOf="@id/iv_search_by_qr_code"
                app:layout_constraintTop_toTopOf="@id/ed_txt_search" />

            <ImageView
                android:id="@+id/iv_search_by_qr_code"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/qr_code_icon"
                app:layout_constraintBottom_toBottomOf="@id/btn_search"
                app:layout_constraintEnd_toStartOf="@id/btn_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_search"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_more_vertical"
                app:layout_constraintBottom_toBottomOf="@id/ed_txt_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/ed_txt_search"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_patient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar_container" />

        <ProgressBar
            android:id="@+id/progress_bar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_no_search_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/no_search_result"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>